--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
 routers.first-router.on=false
 routers.file-router.on=false
-routers.activemq-router.on=true
+routers.activemq-router.on=false
+routers.file.json.2.activemq-router.on=true
 
 spring.activemq.broker-url=tcp://localhost:61616
