added router to process XML body

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ routers.first-router.on=false
 routers.file-router.on=false
 routers.activemq-router.on=false
 routers.file.json.2.activemq-router.on=true
+routers.file.xml.2.activemq-router.on=true
 
 spring.activemq.broker-url=tcp://localhost:61616
