added router to process XML and to invoke REST API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ server.port=8080
 routers.first-router.on=false
 routers.file-router.on=false
 routers.activemq-router.on=false
-routers.file.json.2.activemq-router.on=true
-routers.file.xml.2.activemq-router.on=true
+routers.kafka-router.on=false
+routers.restapi.on=true
+routers.file.json.2.activemq-router.on=false
+routers.file.xml.2.activemq-router.on=false
 
 spring.activemq.broker-url=tcp://localhost:61616
+camel.component.kafka.brokers=localhost:9092
