added router to read exchange values from files and send them to rest-api. This one introduce first Camel Logic overview also.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8080
 routers.first-router.on=false
 routers.file-router.on=false
+routers.file-to-rest-router.on=true
 routers.activemq-router.on=false
 routers.kafka-router.on=false
-routers.restapi.on=true
+routers.restapi.on=false
 routers.file.json.2.activemq-router.on=false
 routers.file.xml.2.activemq-router.on=false
 
