added routes to learn EIP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8080
+routers.patterns.on=false
+routers.patterns.split.on=true
 routers.first-router.on=false
 routers.file-router.on=false
-routers.file-to-rest-router.on=true
+routers.file-to-rest-router.on=false
 routers.activemq-router.on=false
 routers.kafka-router.on=false
 routers.restapi.on=false
@@ -10,3 +12,4 @@ routers.file.xml.2.activemq-router.on=false
 
 spring.activemq.broker-url=tcp://localhost:61616
 camel.component.kafka.brokers=localhost:9092
+camel.springboot.message-history = true
