update routes documentation to learn EIP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
-routers.patterns.on=false
-routers.patterns.split.on=true
+routers.patterns.on=true
+routers.patterns.split.on=false
 routers.first-router.on=false
 routers.file-router.on=false
 routers.file-to-rest-router.on=false
