update routes documentation to learn EIP and added other examples

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8080
 routers.patterns.on=true
 routers.patterns.split.on=false
+routers.patterns.split.custom.on=false
+routers.patterns.aggregate.01.on=false
 routers.first-router.on=false
 routers.file-router.on=false
 routers.file-to-rest-router.on=false
