update routes documentation to learn EIP and added other examples

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
-routers.patterns.on=true
+routers.best-practices.on=false
+routers.patterns.on=false
+routers.patterns.multicast.on=true
 routers.patterns.split.on=false
 routers.patterns.split.custom.on=false
 routers.patterns.aggregate.01.on=false
@@ -15,3 +17,15 @@ routers.file.xml.2.activemq-router.on=false
 spring.activemq.broker-url=tcp://localhost:61616
 camel.component.kafka.brokers=localhost:9092
 camel.springboot.message-history = true
+
+endpoint-logging-01-property=log:log-routing-slip-01
+routing-slip-time-period-property=2500
+
+custom.property.bp.timer.period=1500
+custom.property.bp.log-endpoint=log:best-practice-logger
+custom.property.dql.channel=activemq:my-dead-letter-queue
+
+#logging.level.org.springframework = INFO
+#logging.level.org.springframework.amqp.rabbit = DEBUG
+#logging.level.org.apche.camel.spring.boot = INFO
+#logging.level.org.apche.camel.impl = DEBUG
