Added Enc ActiveMq Route Sender Example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 routers.best-practices.on=false
 routers.patterns.on=false
-routers.patterns.multicast.on=true
+routers.patterns.multicast.on=false
 routers.patterns.split.on=false
 routers.patterns.split.custom.on=false
 routers.patterns.aggregate.01.on=false
@@ -9,6 +9,7 @@ routers.first-router.on=false
 routers.file-router.on=false
 routers.file-to-rest-router.on=false
 routers.activemq-router.on=false
+routers.activemq-router.enc.on=true
 routers.kafka-router.on=false
 routers.restapi.on=false
 routers.file.json.2.activemq-router.on=false
